--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,41 @@
-<html>
-    <head>
-        <title>模板文件</title>
-    </head>
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF_*">
+    <title>贪吃蛇</title>
+</head>
+<body>
+
+    <div id="main">
+
+        <!-- 游戏页面 -->
+        <div id="stage">
+            <!-- 蛇 -->
+            <div id="snake">
+                <!-- 身体 -->
+                <div></div>
+            </div>
+            <!-- 食物 -->
+            <div id="food">
+                <!-- 添加4个div。设置食物样式 -->
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+        <!-- 游戏记分牌 -->
+        <div id="score-panel">
+            <div>
+                SCORE:<span id="score">0</span>
+            </div>
+            <div>
+                LEVEL:<span id="level">1</span>
+            </div>
+        </div>
+
+    </div>
+    
+</body>
 </html>
